--- a/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/DS.MainModule.csproj
+++ b/1.Layers/1.2Distributed Services/1.2.2MainModule/DS.MainModule/DS.MainModule.csproj
@@ -354,6 +354,7 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\CollectionModelDescription.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
+    <None Include="Properties\PublishProfiles\api.pubxml" />
     <None Include="Properties\PublishProfiles\ApiWS.pubxml" />
     <None Include="Properties\PublishProfiles\SagasWS.pubxml" />
     <None Include="Properties\PublishProfiles\WebApi.pubxml" />
