--- a/Services/GasMundialWS/App.config
+++ b/Services/GasMundialWS/App.config
@@ -10,14 +10,14 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-DS.MainModule-20180716112358.mdf;Initial Catalog=aspnet-DS.MainModule-20180716112358;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Sagas.MainModule;Integrated Security=true;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ConnectionString" connectionString="data source=localhost;initial catalog=Sagas.MainModule;Integrated Security=true;MultipleActiveResultSets=True;App=EntityFramework" />-->
-
+    <add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\konsilio;initial catalog=Sagas.MainModule;user id=sa;password=X27zaxac!;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ConnectionString" connectionString="data source=localhost\konsilio;initial catalog=Sagas.MainModule;user id=sa;password=X27zaxac!;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework" />
+    
     <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.0.13;initial catalog=SagasN.MainModule;user id=sa;password=Nts.682;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ConnectionString" connectionString="data source=192.168.0.13;initial catalog=SagasN.MainModule;user id=sa;password=Nts.682;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework" />-->
 
-    <add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=neoteckags.fortiddns.com,14333;initial catalog=Sagas.MainModule;user id=sa;password=.x27zaxac;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ConnectionString" connectionString="data source=neoteckags.fortiddns.com,14333;initial catalog=Sagas.MainModule;user id=sa;password=.x27zaxac;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework" />
+    <!--<add name="SagasMainModuleEntities" connectionString="metadata=res://*/DbContexts.Sagas.csdl|res://*/DbContexts.Sagas.ssdl|res://*/DbContexts.Sagas.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=neoteckags.fortiddns.com,14333;initial catalog=Sagas.MainModule;user id=sa;password=.x27zaxac;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ConnectionString" connectionString="data source=neoteckags.fortiddns.com,14333;initial catalog=Sagas.MainModule;user id=sa;password=.x27zaxac;Integrated Security=false;MultipleActiveResultSets=True;App=EntityFramework" />-->
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
