--- a/1.Layers/1.1Presentation/1.1.2Mobile/app/build.gradle
+++ b/1.Layers/1.1Presentation/1.1.2Mobile/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 16
         targetSdkVersion 27
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.20200416"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     lintOptions {
